# HandWriteIARecognition

./: BMPImageLoader.h  BMPstructure.h  CMakeLists.txt  MACROS.h  Neural_Net.cpp  Neural_Net.h  Neuron.cpp  Neuron.h  Topology.cpp  Topology.h  main.cpp
Corpus/: CorpusTemplate.psd
Graph/: Graph.h
